[package]
name = "omena-resolver"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Omena resolver boundary over source-resolution contracts"
repository = "https://github.com/omenien/omena-resolver"
readme = "README.md"
keywords = ["omena", "css-modules", "resolver", "analysis"]
categories = ["development-tools"]
exclude = [".github/**"]

[lib]
name = "omena_resolver"

[lints.rust]
unsafe_code = "deny"
missing_docs = "allow"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[dependencies]
engine-input-producers = { package = "omena-engine-input-producers", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
